<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <net.performance.assessment.view.widget.CustomTitleBar
        android:id="@+id/custom_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:left_background="@drawable/btn_back_selector"
        app:title_text="@string/title_grab_single" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_10"
        android:background="@drawable/shape_gray_bg" />

    <ScrollView style="@style/style_scroll_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dimen_10">

                <TextView
                    style="@style/style_8a_label"
                    android:text="@string/gs_post_single_num"/>

                <TextView
                    android:id="@+id/tv_gs_post_single_num"
                    style="@style/style_1e_label"
                    tools:text="JXT20171111"/>
            </LinearLayout>

            <TextView
                style="@style/style_8a_label"
                android:text="@string/gs_work_item_type"
                android:layout_marginTop="@dimen/dimen_15"/>

            <TextView
                android:id="@+id/tv_gs_work_item_type"
                style="@style/style_1e_label"
                android:layout_marginTop="@dimen/dimen_5"
                android:layout_marginStart="@dimen/dimen_10"
                android:layout_marginLeft="@dimen/dimen_10"
                tools:text="机电检修"/>

            <TextView
                style="@style/style_8a_label"
                android:text="@string/gs_publish_content"
                android:layout_marginTop="@dimen/dimen_10"/>

            <TextView
                android:id="@+id/tv_gs_publish_content"
                style="@style/style_1e_label"
                android:layout_marginTop="@dimen/dimen_5"
                android:layout_marginStart="@dimen/dimen_10"
                android:layout_marginLeft="@dimen/dimen_10"
                tools:text="机电检修"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_15">

                <TextView
                    android:id="@+id/label_gs_release_time"
                    style="@style/style_8a_label"
                    android:text="@string/gs_release_time"/>

                <TextView
                    android:id="@+id/label_gs_publisher"
                    style="@style/style_8a_label"
                    android:text="@string/gs_publisher"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:layout_below="@+id/label_gs_release_time"
                    android:layout_alignRight="@+id/label_gs_release_time"
                    android:layout_alignEnd="@+id/label_gs_release_time"/>

                <TextView
                    android:id="@+id/label_gs_status"
                    style="@style/style_8a_label"
                    android:text="@string/gs_status"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:layout_below="@+id/label_gs_publisher"
                    android:layout_alignRight="@+id/label_gs_release_time"
                    android:layout_alignEnd="@+id/label_gs_release_time"/>

                <TextView
                    android:id="@+id/label_gs_grab_single_time"
                    style="@style/style_8a_label"
                    android:text="@string/gs_grab_single_time"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:layout_below="@+id/label_gs_status"/>

                <TextView
                    android:id="@+id/label_gs_grab_single_person"
                    style="@style/style_8a_label"
                    android:text="@string/gs_grab_single_person"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:layout_below="@+id/label_gs_grab_single_time"
                    android:layout_alignRight="@+id/label_gs_release_time"
                    android:layout_alignEnd="@+id/label_gs_release_time"/>

                <TextView
                    android:id="@+id/label_gs_grab_single_position"
                    style="@style/style_8a_label"
                    android:text="@string/gs_grab_single_position"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:layout_below="@+id/label_gs_grab_single_person"/>

                <TextView
                    android:id="@+id/tv_gs_release_time"
                    style="@style/style_1e_label"
                    tools:text="2017-11-11 08:00:00"
                    android:layout_toRightOf="@+id/label_gs_release_time"
                    android:layout_toEndOf="@+id/label_gs_release_time"/>

                <TextView
                    android:id="@+id/tv_gs_publisher"
                    style="@style/style_1e_label"
                    tools:text="王五"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:layout_below="@+id/label_gs_release_time"
                    android:layout_toRightOf="@+id/label_gs_release_time"
                    android:layout_toEndOf="@+id/label_gs_release_time"/>

                <TextView
                    android:id="@+id/tv_gs_status"
                    style="@style/style_1e_label"
                    android:text="@string/gs_published"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:layout_below="@+id/label_gs_publisher"
                    android:layout_toRightOf="@+id/label_gs_release_time"
                    android:layout_toEndOf="@+id/label_gs_release_time"/>

                <TextView
                    android:id="@+id/tv_gs_grab_single_time"
                    style="@style/style_1e_label"
                    tools:text="2017-11-11 08:10:00"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:layout_below="@+id/label_gs_status"
                    android:layout_toRightOf="@+id/label_gs_release_time"
                    android:layout_toEndOf="@+id/label_gs_release_time"/>

                <TextView
                    android:id="@+id/tv_gs_grab_single_person"
                    style="@style/style_1e_label"
                    tools:text="赵六"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:layout_below="@+id/label_gs_grab_single_time"
                    android:layout_toRightOf="@+id/label_gs_release_time"
                    android:layout_toEndOf="@+id/label_gs_release_time"/>

                <TextView
                    android:id="@+id/tv_gs_grab_single_position"
                    style="@style/style_1e_label"
                    android:text="@string/tip_location_loading"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:layout_below="@+id/label_gs_grab_single_person"
                    android:layout_toRightOf="@+id/label_gs_release_time"
                    android:layout_toEndOf="@+id/label_gs_release_time"
                    android:layout_toLeftOf="@+id/tv_again_location"
                    android:layout_toStartOf="@+id/tv_again_location"
                    android:layout_marginRight="@dimen/dimen_5"
                    android:layout_marginEnd="@dimen/dimen_5"
                    android:singleLine="true"
                    android:ellipsize="start"/>

                <TextView
                    android:id="@+id/tv_again_location"
                    style="@style/style_1e_label"
                    android:layout_below="@+id/label_gs_grab_single_person"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:textColor="@color/c_0043a3"
                    android:text="@string/lbl_again_location"
                    android:onClick="againLocation"
                    android:visibility="gone"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

            <Button
                android:id="@+id/btn_grab_single"
                style="@style/style_btn"
                android:layout_marginTop="@dimen/dimen_30"
                android:onClick="commitOrder"
                android:text="@string/btn_grab_single"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>