<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <net.performance.assessment.view.widget.CustomTitleBar
        android:id="@+id/custom_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:left_background="@drawable/btn_back_selector"
        app:title_text="@string/title_grab_single_progress" />

    <ScrollView style="@style/style_scroll_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_15">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dimen_10">

                <TextView
                    style="@style/style_8a_label"
                    android:text="@string/gsp_post_single_num"/>

                <TextView
                    android:id="@+id/tv_gsp_post_single_num"
                    style="@style/style_1e_label"
                    tools:text="JXT20171111"/>
            </LinearLayout>

            <TextView
                style="@style/style_8a_label"
                android:text="@string/gsp_work_item_type"
                android:layout_marginTop="@dimen/dimen_15"/>

            <TextView
                android:id="@+id/tv_gsp_work_item_type"
                style="@style/style_1e_label"
                android:layout_marginTop="@dimen/dimen_10"
                android:layout_marginLeft="@dimen/dimen_10"
                tools:text="机电检修"/>

            <TextView
                style="@style/style_8a_label"
                android:text="@string/gsp_publish_content"
                android:layout_marginTop="@dimen/dimen_15"/>

            <TextView
                android:id="@+id/tv_gsp_publish_content"
                style="@style/style_1e_label"
                android:layout_marginTop="@dimen/dimen_10"
                android:layout_marginLeft="@dimen/dimen_10"
                tools:text="机电检修"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_15">

                <TextView
                    android:id="@+id/label_gsp_release_time"
                    style="@style/style_8a_label"
                    android:text="@string/gs_release_time"/>

                <TextView
                    android:id="@+id/label_gsp_publisher"
                    style="@style/style_8a_label"
                    android:text="@string/gsp_publisher"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:layout_below="@+id/label_gsp_release_time"
                    android:layout_alignRight="@+id/label_gsp_release_time"
                    android:layout_alignEnd="@+id/label_gsp_release_time"/>

                <TextView
                    android:id="@+id/label_gsp_status"
                    style="@style/style_8a_label"
                    android:text="@string/gsp_status"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:layout_below="@+id/label_gsp_publisher"
                    android:layout_alignRight="@+id/label_gsp_release_time"
                    android:layout_alignEnd="@+id/label_gsp_release_time"/>

                <TextView
                    android:id="@+id/label_grab_single_time"
                    style="@style/style_8a_label"
                    android:text="@string/gsp_grab_single_time"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:layout_below="@+id/label_gsp_status"/>

                <TextView
                    android:id="@+id/label_grab_single_person"
                    style="@style/style_8a_label"
                    android:text="@string/gsp_grab_single_person"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:layout_below="@+id/label_grab_single_time"
                    android:layout_alignRight="@+id/label_gsp_release_time"
                    android:layout_alignEnd="@+id/label_gsp_release_time"/>

                <TextView
                    android:id="@+id/label_grab_single_position"
                    style="@style/style_8a_label"
                    android:text="@string/gsp_grab_single_position"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:layout_below="@+id/label_grab_single_person"/>

                <TextView
                    android:id="@+id/tv_gsp_release_time"
                    style="@style/style_1e_label"
                    tools:text="2017-11-11 08:00:00"
                    android:layout_toRightOf="@+id/label_gsp_release_time"
                    android:layout_toEndOf="@+id/label_gsp_release_time"/>

                <TextView
                    android:id="@+id/tv_gsp_publisher"
                    style="@style/style_1e_label"
                    tools:text="王五"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:layout_below="@+id/label_gsp_release_time"
                    android:layout_toRightOf="@+id/label_gsp_release_time"
                    android:layout_toEndOf="@+id/label_gsp_release_time"/>

                <TextView
                    android:id="@+id/tv_gsp_status"
                    style="@style/style_1e_label"
                    android:text="@string/gsp_published"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:layout_below="@+id/label_gsp_publisher"
                    android:layout_toRightOf="@+id/label_gsp_release_time"
                    android:layout_toEndOf="@+id/label_gsp_release_time"/>

                <TextView
                    android:id="@+id/tv_grab_single_time"
                    style="@style/style_1e_label"
                    tools:text="2017-11-11 08:10:00"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:layout_below="@+id/label_gsp_status"
                    android:layout_toRightOf="@+id/label_gsp_release_time"
                    android:layout_toEndOf="@+id/label_gsp_release_time"/>

                <TextView
                    android:id="@+id/tv_grab_single_person"
                    style="@style/style_1e_label"
                    tools:text="赵六"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:layout_below="@+id/label_grab_single_time"
                    android:layout_toRightOf="@+id/label_gsp_release_time"
                    android:layout_toEndOf="@+id/label_gsp_release_time"/>

                <TextView
                    android:id="@+id/tv_grab_single_position"
                    style="@style/style_1e_label"
                    tools:text="广州市天河区"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:layout_below="@+id/label_grab_single_person"
                    android:layout_toRightOf="@+id/label_gsp_release_time"
                    android:layout_toEndOf="@+id/label_gsp_release_time"
                    android:singleLine="true"
                    android:ellipsize="start"/>

            </RelativeLayout>

            <TextView
                style="@style/style_8a_label"
                android:text="@string/gsp_participant"
                android:layout_marginTop="@dimen/dimen_15"/>

            <TextView
                android:id="@+id/et_gsp_participant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/style_login_edit_text"
                android:layout_marginTop="@dimen/dimen_10"
                android:layout_marginLeft="@dimen/dimen_10"
                android:drawableRight="@drawable/ic_select_tip"
                android:layout_marginRight="@dimen/dimen_10"
                android:hint="@string/hint_gsp_participant"
                android:textSize="@dimen/text_16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="@dimen/dimen_10"
                android:background="@color/div_input_edit_line_normal"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_15">

                <TextView
                    android:id="@+id/label_gsp_complete_percentage"
                    style="@style/style_8a_label"
                    android:text="@string/gsp_complete_percentage"
                    android:layout_alignBottom="@+id/ll_et_percentage"
                    android:layout_marginBottom="@dimen/dimen_5"/>

                <TextView
                    style="@style/style_8a_label"
                    android:text="@string/gsp_complete_time"
                    android:layout_below="@+id/label_gsp_complete_percentage"
                    android:layout_alignRight="@+id/label_gsp_complete_percentage"
                    android:layout_alignEnd="@+id/label_gsp_complete_percentage"
                    android:layout_marginTop="@dimen/dimen_15"/>

                <LinearLayout
                    android:id="@+id/ll_et_percentage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/label_gsp_complete_percentage"
                    android:layout_toEndOf="@+id/label_gsp_complete_percentage"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/et_gsp_complete_percentage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/style_login_edit_text"
                        android:layout_marginTop="@dimen/dimen_10"
                        android:inputType="numberDecimal"
                        android:hint="@string/hint_complete_percentage"
                        android:maxLength="6"
                        android:textSize="@dimen/text_16" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/div_input_edit_line_normal"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/et_gsp_complete_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/style_login_edit_text"
                    android:layout_marginTop="@dimen/dimen_15"
                    android:layout_marginRight="@dimen/dimen_10"
                    android:drawableRight="@drawable/ic_select_tip"
                    android:hint="@string/gsp_select_complete_time"
                    android:layout_toRightOf="@+id/label_gsp_complete_percentage"
                    android:layout_toEndOf="@+id/label_gsp_complete_percentage"
                    android:layout_below="@+id/ll_et_percentage"
                    android:textSize="@dimen/text_16" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/et_gsp_complete_time"
                    android:layout_toRightOf="@+id/label_gsp_complete_percentage"
                    android:layout_toEndOf="@+id/label_gsp_complete_percentage"
                    android:background="@color/div_input_edit_line_normal"/>

            </RelativeLayout>

            <TextView
                style="@style/style_8a_label"
                android:layout_marginTop="@dimen/dimen_15"
                android:text="@string/gsp_finish_working_pic"/>

            <ImageView
                android:id="@+id/iv_gsp_finish_working_pic"
                android:layout_width="@dimen/dimen_100"
                android:layout_height="@dimen/dimen_100"
                android:layout_marginTop="@dimen/dimen_10"
                android:layout_marginLeft="@dimen/dimen_20"
                android:background="@drawable/shape_8a_pane_bg"
                android:scaleType="fitXY"
                android:src="@drawable/selector_image_add"
                android:contentDescription="@null"/>

            <Button
                android:id="@+id/btn_gsp_submit"
                style="@style/style_btn"
                android:layout_marginTop="@dimen/dimen_30"
                android:layout_marginBottom="@dimen/dimen_40"
                android:text="@string/btn_submit"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>